# zeitgrep

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: main.rs  verbs.rs
src/tests/: test_utils.rs
templates/verbs/: example.jinja
