[package]
name = "zeitgrep"
version = "0.7.1"
edition = "2024"
license = "MIT"
description = "Find frecent results in git repositories using regular expressions"
repository = "https://github.com/kantord/zeitgrep"

[[bin]]
name = "zg"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
frecenfile = "0.3.0"
git2 = "0.20.1"
grep = "0.3.2"
ignore = "0.4.23"
termcolor = "1.4.1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
